prevent long usernames from overflowing

--- a/client/src/css/OrderHistory.css
+++ b/client/src/css/OrderHistory.css
@@ -12,4 +12,5 @@
 #username {
     align-self: start;
     margin-left: 1rem;
+    overflow-wrap: break-word;
 }
